Add workflows, fix networking in local.conf. Not tested!

--- a/local.conf
+++ b/local.conf
@@ -5,9 +5,11 @@ DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
 SERVICE_TOKEN=CrazyLongServiceToken
-#FIXED_RANGE=10.0.2.0/24
-#FLOATING_RANGE=192.168.20.0/25
-#NETWORK_GATEWAY=10.0.2.1
+FLOATING_RANGE=172.16.80.224/27
+FIXED_RANGE=172.16.80.0/24
+FIXED_NETWORK_SIZE=256
+FLAT_INTERFACE=br100
+PUBLIC_INTERFACE=eth1
 HOST_IP=172.16.80.100
 LOGFILE=$DEST/logs/stack.sh.log
 LOGDAYS=1
